--- a/article-api.WebApi/article-api.WebApi.csproj
+++ b/article-api.WebApi/article-api.WebApi.csproj
@@ -1,9 +1,14 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <RootNamespace>article_api.WebApi</RootNamespace>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.3.2" />
+    <PackageReference Include="System.Text.Json" Version="6.0.5" />
+  </ItemGroup>
 
 
 </Project>
