--- a/article-api.WebApi/appsettings.json
+++ b/article-api.WebApi/appsettings.json
@@ -6,5 +6,10 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+
+  "AllowedHosts": "*",
+
+  "ConnectionStrings": {
+    "Default": "Initial Catalog=ArticlesDb; Data Source=localhost,1433; Persist Security Info=True;User ID=SA;Password=Admin1234"
+  }
 }
